--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,205 +9,23 @@
     <div class="card">
       <h5>Default</h5>
       <div class="flex flex-wrap gap-2">
-        <button pButton pRipple label="Submit"></button>
-        <button pButton pRipple label="Disabled" disabled="true"></button>
-        <p-button label="Load Resumes" styleClass="p-button-link" (onClick)="loadResumes()"></p-button>
-      </div>
-    </div>
+        <button
+          pButton
+          pRipple
+          label="Load"
+          (click)="loadResumes()"
+        ></button>
 
-    <div class="card">
-      <h5>Severities</h5>
-      <div class="flex flex-wrap gap-2">
-        <button pButton pRipple type="button" label="Primary"></button>
         <button
           pButton
           pRipple
-          type="button"
-          label="Secondary"
-          class="p-button-secondary"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Success"
-          class="p-button-success"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Info"
-          class="p-button-info"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Warning"
-          class="p-button-warning"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Help"
-          class="p-button-help"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Danger"
-          class="p-button-danger"
+          label="Print"
+          (click)="print()"
         ></button>
       </div>
     </div>
-
-    <div class="card">
-      <h5>Text</h5>
-      <div class="flex flex-wrap gap-2">
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Primary"
-          class="p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Secondary"
-          class="p-button-secondary p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Success"
-          class="p-button-success p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Info"
-          class="p-button-info p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Warning"
-          class="p-button-warning p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Help"
-          class="p-button-help p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Danger"
-          class="p-button-danger p-button-text"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Plain"
-          class="p-button-text p-button-plain"
-        ></button>
-      </div>
-    </div>
-
-    <div class="card">
-      <h5>Outlined</h5>
-      <div class="flex flex-wrap gap-2">
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Primary"
-          class="p-button-outlined"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Secondary"
-          class="p-button-outlined p-button-secondary"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Success"
-          class="p-button-outlined p-button-success"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Info"
-          class="p-button-outlined p-button-info"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Warning"
-          class="p-button-outlined p-button-warning"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Help"
-          class="p-button-outlined p-button-help"
-        ></button>
-        <button
-          pButton
-          pRipple
-          type="button"
-          label="Danger"
-          class="p-button-outlined p-button-danger"
-        ></button>
-      </div>
-    </div>
-
-    <div class="card">
-      <h5>Button Set</h5>
-      <span class="p-buttonset">
-        <button pButton pRipple label="Save" icon="pi pi-check"></button>
-        <button pButton pRipple label="Delete" icon="pi pi-trash"></button>
-      </span>
-    </div>
-    <div class="card">
-      <h5>Templating</h5>
-      <div class="flex flex-wrap gap-2">
-        <p-button>
-          <img
-            alt="logo"
-            src="https://primefaces.org/cdn/primeng/images/primeng-icon.svg"
-            style="width: 1.5rem"
-          />
-        </p-button>
-
-        <p-button styleClass="p-button-outlined">
-          <img
-            alt="logo"
-            src="https://primefaces.org/cdn/primeng/images/primeng-icon.svg"
-            style="width: 1.5rem"
-          />
-          <span class="ml-2 font-bold">PrimeNG</span>
-        </p-button>
-      </div>
-    </div>
+  </div>
+  <div class="col-12">
+    <rb-simple-template id="template"></rb-simple-template>
   </div>
 </div>
