--- a/src/app/components/form-wrapper/form-wrapper.component.html
+++ b/src/app/components/form-wrapper/form-wrapper.component.html
@@ -1,1 +1,11 @@
-<form>form</form>
+<div class="form-container">
+  <div class="personal-details">
+    <rb-personal-details></rb-personal-details>
+  </div>
+  <div class="education">
+    <rb-education-list></rb-education-list>
+  </div>
+  <div class="experience">
+    <rb-experience-list></rb-experience-list>
+  </div>
+</div>
