--- a/src/app/components/experience/experience-list/experience-list.component.html
+++ b/src/app/components/experience/experience-list/experience-list.component.html
@@ -1,18 +1,17 @@
 <div class="form-card">
-  <h2>Education</h2>
+  <h2>Experience</h2>
   <div class="list">
     <div class="row">
-      <span>London City University</span
-      ><i class="pi pi-eye text-blue-500 text-xl"></i>
+      <span>Umbrella Inc.</span><i class="pi pi-eye text-blue-500 text-xl"></i>
     </div>
     <div class="row">
-      <span>Another University</span
+      <span>Black Mesa Labs</span
       ><i class="pi pi-eye-slash text-blue-500 text-xl"></i>
     </div>
   </div>
   <div class="command">
     <p-button
-      label="Education"
+      label="Experience"
       icon="pi pi-plus"
       [rounded]="true"
       [outlined]="true"
