--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .sidebar-nav {
   display: flex;
   gap: 1rem;
-  padding: 14px 8px;
+  padding: 18px;
 
   background-color: #fff;
   border-radius: 12px;
