--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <rb-form-wrapper></rb-form-wrapper>
     </div>
   </div>
-  <div class="resume">
+  <div>
     <rb-resume></rb-resume>
   </div>
 </div>
