--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,14 +1,9 @@
 <div class="resume-container">
   <div class="resume top">
-    <!-- <PersonalInfoSection
-          fullName={personalInfo.fullName}
-          email={personalInfo.email}
-          phoneNumber={personalInfo.phoneNumber}
-          address={personalInfo.address}
-        />
-        <div>
-          <EducationInfoSection educations={sections.educations} />
-          <ExperienceInfoSection experiences={sections.experiences} />
-        </div> -->
+    <rb-personal-info-section></rb-personal-info-section>
+    <div>
+      <rb-education-section></rb-education-section>
+      <rb-experience-section></rb-experience-section>
+    </div>
   </div>
 </div>
