--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,4 +1,4 @@
-<div class="resume-container">
+<div class="resume-container" id="resumePages">
   <div class="resume top">
     <rb-personal-info-section></rb-personal-info-section>
     <div>
