--- a/src/app/components/resume/personal-info-section/personal-info-section.component.html
+++ b/src/app/components/resume/personal-info-section/personal-info-section.component.html
@@ -1,11 +1,15 @@
 <div class="personal-info">
-  <h1 class="resume-name">Josephine Meyers</h1>
+  <h1 class="resume-name">{{ personalDetails?.fullName }}</h1>
   <div class="contact-info">
     <div>
-      <i class="pi pi-envelope"></i
-      ><span>josephine.meyersmail.co.uk</span>
+      <i class="pi pi-envelope"></i><span>{{ personalDetails?.email }}</span>
     </div>
-    <div><i class="pi pi-phone"></i><span>+44 3245 5521 5521</span></div>
-    <div><i class="pi pi-map-marker"></i><span>London, UK</span></div>
+    <div>
+      <i class="pi pi-phone"></i><span>{{ personalDetails?.phoneNumber }}</span>
+    </div>
+    <div>
+      <i class="pi pi-map-marker"></i
+      ><span>{{ personalDetails?.address }}</span>
+    </div>
   </div>
 </div>
