--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,6 +1,11 @@
 <div class="resume-container" id="resumePages">
   <div class="resume top">
-    <rb-personal-info-section></rb-personal-info-section>
+    @if (personalDetails$ | async; as personalDetails) {
+      <rb-personal-info-section
+        [personalDetails]="personalDetails"
+      ></rb-personal-info-section>
+    }
+
     <div>
       <rb-education-section></rb-education-section>
       <rb-experience-section></rb-experience-section>
