--- a/src/app/components/education/education-form/education-form.component.scss
+++ b/src/app/components/education/education-form/education-form.component.scss
@@ -48,13 +48,19 @@
   gap: 8px;
 }
 
-label > * {
-  font-family: "NotoSans-SemiBold";
-}
+// label > * {
+//   font-family: "NotoSans-SemiBold";
+// }
 
 .optional-text,
 .recommended-text {
   margin-left: 8px;
   color: rgb(156, 163, 175);
   font-size: 10.5px;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
