--- a/src/app/components/personal-details/personal-details.component.html
+++ b/src/app/components/personal-details/personal-details.component.html
@@ -3,7 +3,7 @@
   <form
     class="p-fluid"
     [formGroup]="personalDetailsForm"
-    ngxsForm="resumes.infos.personalDetails"
+    ngxsForm="resumes.sections.personalDetails.form"
     [ngxsFormDebounce]="-1"
   >
     <div class="field">
