--- a/src/app/components/education/education-list/education-list.component.html
+++ b/src/app/components/education/education-list/education-list.component.html
@@ -4,11 +4,11 @@
     <rb-education-form></rb-education-form>
   } @else {
     <div class="list">
-      <div class="row" (click)="showForm()">
+      <div class="row" (click)="editEducation(1)">
         <span>London City University</span
         ><i class="pi pi-eye text-blue-500 text-xl"></i>
       </div>
-      <div class="row" (click)="showForm()">
+      <div class="row" (click)="editEducation(2)">
         <span>Another University</span
         ><i class="pi pi-eye-slash text-blue-500 text-xl"></i>
       </div>
@@ -20,7 +20,7 @@
         [rounded]="true"
         [outlined]="true"
         severity="secondary"
-        (onClick)="showForm()"
+        (onClick)="addNewEducation()"
       ></p-button>
     </div>
   }
