add new education

--- a/src/app/components/education/education-form/education-form.component.html
+++ b/src/app/components/education/education-form/education-form.component.html
@@ -65,7 +65,7 @@
         severity="danger"
       ></p-button>
     } @else {
-      <p-button label="Save" [outlined]="true"></p-button>
+      <p-button label="Save" [outlined]="true" (onClick)="addEducation()"></p-button>
     }
 
     <p-button
