--- a/src/app/components/resume/education-section/education-section.component.html
+++ b/src/app/components/resume/education-section/education-section.component.html
@@ -1,7 +1,7 @@
 <div class="education-info-section resume-section">
   <h3 class="header-text">Education</h3>
   @for (education of educationList; track education.id) {
-    <!-- TODO education visible -->
+    <!-- TODO should check education visibility and toggle it in preview -->
     <!-- @if (education.isVisible) { -->
     <div class="education-info">
       <div class="education-info-group">
