--- a/src/app/components/education/education-form/education-form.component.scss
+++ b/src/app/components/education/education-form/education-form.component.scss
@@ -63,4 +63,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    flex: 1;
+    justify-content: flex-end;
+  }
 }
